exports_files([
    "abseil_windows_gnullvm_thread_identity.patch",
    "aws-lc-sys_memcmp_check.patch",
    "aws-lc-sys_windows_bazel_prebuilt_nasm.patch",
    "llvm_rusty_v8_custom_libcxx.patch",
    "llvm_windows_arm64_powl.patch",
    "llvm_windows_mingw_compat.patch",
    "rules_rust_windows_build_script_runner_paths.patch",
    "rules_rust_windows_exec_bin_target.patch",
    "rules_rust_windows_exec_std.patch",
    "rules_cc_rusty_v8_custom_libcxx.patch",
    "rules_rust_repository_set_replacement.patch",
    "rules_rs_build_script_deps_annotation.patch",
    "rules_rs_windows_gnullvm_exec.patch",
    "rules_rs_windows_gnullvm_link_flags.patch",
    "rusty_v8_prebuilt_out_dir.patch",
    "v8_bazel_rules.patch",
    "v8_module_deps.patch",
    "v8_source_portability.patch",
    "webrtc-sys_hermetic_darwin_sysroot.patch",
    "windows-link.patch",
])
