load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "app-server-protocol",
    crate_name = "codex_app_server_protocol",
    test_data_extra = glob(
        ["schema/**"],
        allow_empty = True,
    ),
    test_sizes = {
        "app-server-protocol-schema_fixtures-test-windows-cross": "medium",
        "app-server-protocol-unit-tests-windows-cross": "medium",
    },
)
