[package]
name = "codex-app-server-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_app_server_transport"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-app-server-protocol = { workspace = true }
codex-protocol = { workspace = true }
futures = { workspace = true }
prost = "0.14.3"
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true }
tonic = { workspace = true, features = ["router", "transport"] }
tonic-prost = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tonic-prost-build = { version = "=0.14.3", default-features = false, features = ["transport"] }
