[package]
name = "codex-app-server-ws"
version = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "http1"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

codex-common = { path = "../common", features = ["cli"] }
codex-core = { path = "../core" }
codex-app-server = { path = "../app-server" }
codex-app-server-protocol = { path = "../app-server-protocol" }

[dev-dependencies]
tokio-tungstenite = "0.28"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
http = "1"
url = "2"
app_test_support = { workspace = true }
codex-protocol = { workspace = true }
