load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
package(default_visibility = ["//visibility:public"])
_DEPS = all_crate_deps(normal = True)
_PROC_MACRO_DEPS = all_crate_deps(proc_macro = True)
_DEV_DEPS = all_crate_deps(normal_dev = True)
_DEV_PROC_MACRO_DEPS = all_crate_deps(proc_macro_dev = True)







rust_library(
    name = "app-server",
    crate_name = "codex_app_server",
    deps = _DEPS,
    proc_macro_deps = _PROC_MACRO_DEPS,
    srcs = glob(["src/**/*.rs"]),
)

rust_binary(
    name = "codex-app-server",
    crate_name = "codex_app_server",
    deps = [":app-server"] + _DEPS,
    proc_macro_deps = _PROC_MACRO_DEPS,
    srcs = glob(["src/**/*.rs"]),
)

rust_test(
    name = "app-server-tests",
    crate = ":app-server",
    deps = _DEV_DEPS,
    proc_macro_deps = _PROC_MACRO_DEPS + _DEV_PROC_MACRO_DEPS,
)


rust_test(
    name = "app-server-integration-tests",
    crate_root = "tests/all.rs",
    srcs = glob(["tests/**/*.rs"]),
    data = glob(["tests/**"]) + [":codex-app-server"],
    deps = [":app-server", "//codex-rs/app-server/tests/common:common"] + _DEPS + _DEV_DEPS,
    proc_macro_deps = _PROC_MACRO_DEPS + _DEV_PROC_MACRO_DEPS,
    env = {
        "CARGO_BIN_EXE_codex-app-server": "$(rootpath :codex-app-server)",
        "CARGO_BIN_EXE_codex_app_server": "$(rootpath :codex-app-server)",
    },
)
