load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
package(default_visibility = ["//visibility:public"])

_DEPS = all_crate_deps(normal = True)
_PROC_MACRO_DEPS = all_crate_deps(proc_macro = True)

rust_library(
    name = "apply-patch",
    crate_name = "codex_apply_patch",
    compile_data = [
        "apply_patch_tool_instructions.md",
    ],
    deps = _DEPS,
    proc_macro_deps = _PROC_MACRO_DEPS,
    srcs = glob(["src/**/*.rs"]),
)

rust_binary(
    name = "apply_patch",
    crate_name = "apply_patch",
    deps = [":apply-patch"] + _DEPS,
    proc_macro_deps = _PROC_MACRO_DEPS,
    srcs = glob(["src/**/*.rs"]),
)

rust_test(
    name = "apply-patch-tests",
    crate = ":apply-patch",
    deps = all_crate_deps(normal_dev = True),
    proc_macro_deps = all_crate_deps(proc_macro_dev = True),
)
